--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora PWA</title>
-    <link rel="stylesheet" href="app.css">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="mask-icon" href="maskable_icon.png">
-</head>
-<body>
-    <div id="app"></div>
-
-    <script src="https://unpkg.com/sw-precache"></script>
-    <script src="manifest.json"></script>
-    <script src="scripts/app.js"></script>
-</body>
-</html>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculadora PWA</title>
+  <link rel="stylesheet"
