--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora PWA</title>
-  <link rel="stylesheet"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora PWA</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+</head>
+<body>
+    <header>
+        <h1>Calculadora PWA</h1>
+    </header>
+    <main>
+        <div class="tab">
+            <button class="tablinks" onclick="openTab(event, 'calculadora')">Calculadora</button>
+            <button class="tablinks" onclick="openTab(event, 'porcentaje')">Porcentaje</button>
+            <button class="tablinks" onclick="openTab(event, 'reglaDeTres')">Regla de Tres</button>
+            <button class="tablinks" onclick="openTab(event, 'conversor')">Conversor de Unidades</button>
+        </div>
+
+        <div id="calculadora" class="tabcontent">
+            <h2>Calculadora</h2>
+            <div id="calc">
+                <input type="text" id="display" readonly>
+                <div class="buttons">
+                    <button onclick="appendNumber('1')">1</button>
+                    <button onclick="appendNumber('2')">2</button>
+                    <button onclick="appendNumber('3')">3</button>
+                    <button onclick
