--- a/index.html
+++ b/index.html
@@ -27,4 +27,55 @@
                     <button onclick="appendNumber('1')">1</button>
                     <button onclick="appendNumber('2')">2</button>
                     <button onclick="appendNumber('3')">3</button>
-                    <button onclick
+                    <button onclick="chooseOperation('+')">+</button>
+                    <button onclick="appendNumber('4')">4</button>
+                    <button onclick="appendNumber('5')">5</button>
+                    <button onclick="appendNumber('6')">6</button>
+                    <button onclick="chooseOperation('-')">-</button>
+                    <button onclick="appendNumber('7')">7</button>
+                    <button onclick="appendNumber('8')">8</button>
+                    <button onclick="appendNumber('9')">9</button>
+                    <button onclick="chooseOperation('*')">*</button>
+                    <button onclick="appendNumber('0')">0</button>
+                    <button onclick="appendDot()">.</button>
+                    <button onclick="clearDisplay()">C</button>
+                    <button onclick="chooseOperation('/')">/</button>
+                    <button onclick="compute()">=</button>
+                </div>
+            </div>
+        </div>
+
+        <div id="porcentaje" class="tabcontent">
+            <h2>Calculadora de Porcentajes</h2>
+            <input type="number" id="percentageAmount" placeholder="Cantidad">
+            <input type="number" id="percentageValue" placeholder="Porcentaje (+ o -)">
+            <button onclick="calculatePercentage()">Calcular</button>
+            <p id="percentageResult"></p>
+        </div>
+
+        <div id="reglaDeTres" class="tabcontent">
+            <h2>Regla de Tres</h2>
+            <input type="number" id="xValue" placeholder="Cantidad X">
+            <input type="number" id="xPercentage" placeholder="Porcentaje de X">
+            <input type="number" id="yValue" placeholder="Cantidad Y">
+            <input type="number" id="yPercentage" placeholder="Porcentaje de Y">
+            <button onclick="calculateRuleOfThree()">Calcular</button>
+            <p id="ruleOfThreeResult"></p>
+        </div>
+
+        <div id="conversor" class="tabcontent">
+            <h2>Conversor de Unidades</h2>
+            <select id="convertFrom">
+                <option value="kgToLbs">Kilogramos a Libras</option>
+                <option value="lbsToKg">Libras a Kilogramos</option>
+                <option value="kmToMiles">Kilómetros a Millas</option>
+                <option value="milesToKm">Millas a Kilómetros</option>
+            </select>
+            <input type="number" id="convertInput" placeholder="Cantidad">
+            <button onclick="convertUnits()">Convertir</button>
+            <p id="convertResult"></p>
+        </div>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
