--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div id="app">
         <div id="tabs">
-            <button class="tab-button active" data-tab="calculator">Calculadora</button>
-            <button class="tab-button" data-tab="percentage">Porcentaje</button>
-            <button class="tab-button" data-tab="rule-of-three">Regla de Tres</button>
-            <button class="tab-button" data-tab="unit-converter">Conversor</button>
+            <button class="tab-button active" data-tab="calculator">Calc</button>
+            <button class="tab-button" data-tab="percentage">%</button>
+            <button class="tab-button" data-tab="rule-of-three">R3</button>
+            <button class="tab-button" data-tab="unit-converter">Conv</button>
         </div>
 
         <div id="calculator" class="tab-content active">
@@ -30,7 +30,7 @@
 
         <div id="percentage" class="tab-content">
             <input type="number" id="baseAmount" placeholder="Cantidad base">
-            <input type="number" id="percentageChange" placeholder="Cambio porcentual (ej: -10 o 15)">
+            <input type="number" id="percentageChange" placeholder="Cambio % (ej: -10 o 15)">
             <button id="calculatePercentage">Calcular</button>
             <div id="percentageResult"></div>
         </div>
