--- a/index.html
+++ b/index.html
@@ -20,11 +20,23 @@
         <div id="calculator" class="tab-content active">
             <input type="text" id="display" readonly>
             <div class="buttons">
-                <button>7</button><button>8</button><button>9</button><button>/</button>
-                <button>4</button><button>5</button><button>6</button><button>*</button>
-                <button>1</button><button>2</button><button>3</button><button>-</button>
-                <button>0</button><button>.</button><button>=</button><button>+</button>
-                <button class="wide">C</button>
+                <button class="calc-btn">7</button>
+                <button class="calc-btn">8</button>
+                <button class="calc-btn">9</button>
+                <button class="calc-btn">/</button>
+                <button class="calc-btn">4</button>
+                <button class="calc-btn">5</button>
+                <button class="calc-btn">6</button>
+                <button class="calc-btn">*</button>
+                <button class="calc-btn">1</button>
+                <button class="calc-btn">2</button>
+                <button class="calc-btn">3</button>
+                <button class="calc-btn">-</button>
+                <button class="calc-btn">0</button>
+                <button class="calc-btn">.</button>
+                <button class="calc-btn">=</button>
+                <button class="calc-btn">+</button>
+                <button class="calc-btn wide">C</button>
             </div>
         </div>
 
@@ -55,7 +67,7 @@
                 <option value="speed">Velocidad</option>
                 <option value="area">Área</option>
             </select>
-            <input type="number" id="fromValue">
+            <input type="number" id="fromValue" placeholder="Valor a convertir">
             <select id="fromUnit"></select>
             <select id="toUnit"></select>
             <div id="convertResult"></div>
