--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculadora PWA</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="icon.png" type="image/png">
+    <link rel="icon" href="icon-192x192.png" type="image/png">
 </head>
 <body>
     <div id="app">
