--- a/index.html
+++ b/index.html
@@ -63,5 +63,16 @@
     <footer>
         <p>© 2024 Calculadora PWA</p>
     </footer>
+    <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("service-worker.js")
+            .then(registration => {
+                console.log("Service Worker registered with scope:", registration.scope);
+            })
+            .catch(error => {
+                console.log("Service Worker registration failed:", error);
+            });
+        }
+    </script>
 </body>
 </html>
